--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="default_screen_background">#FFFFFFFF</color>
+    <color name="main_screen_background">#3772E7</color>
+
+    <color name="text_dark">#1A1B22</color>
+    <color name="text_default">#000</color>
+
+    <color name="control_default">#AEAFB4</color>
 </resources>
