--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -33,11 +33,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingStart="@dimen/screen_horizontal_padding"
         android:orientation="vertical">
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="@dimen/screen_horizontal_padding">
+            android:layout_height="wrap_content">
             <TextView
                 android:paddingVertical="@dimen/settings_screen_item_padding_vertical"
                 android:layout_width="wrap_content"
@@ -53,8 +53,7 @@
         </FrameLayout>
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="@dimen/screen_horizontal_padding">
+            android:layout_height="wrap_content">
             <TextView
                 android:paddingVertical="@dimen/settings_screen_item_padding_vertical"
                 android:layout_width="wrap_content"
@@ -72,8 +71,7 @@
         </FrameLayout>
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="@dimen/screen_horizontal_padding">
+            android:layout_height="wrap_content">
             <TextView
                 android:paddingVertical="@dimen/settings_screen_item_padding_vertical"
                 android:layout_width="wrap_content"
@@ -91,8 +89,7 @@
         </FrameLayout>
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="@dimen/screen_horizontal_padding">
+            android:layout_height="wrap_content">
             <TextView
                 android:paddingVertical="@dimen/settings_screen_item_padding_vertical"
                 android:layout_width="wrap_content"
