--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,30 +6,11 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:background="@color/default_screen_background">
-    <LinearLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp">
-        <ImageView
-            android:id="@+id/back_button"
-            android:foreground="?attr/selectableItemBackground"
-            app:tint="@color/text_default"
-            android:layout_gravity="center_vertical"
-            android:padding="12dp"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/back_icon" />
-        <TextView
-            android:paddingTop="@dimen/header_padding_top"
-            android:paddingBottom="@dimen/header_padding_bottom"
-            android:paddingLeft="12dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/header_text_size"
-            android:textColor="@color/text_default"
-            android:text="@string/settings"
-            android:textStyle="bold"/>
-    </LinearLayout>
+        android:layout_marginBottom="24dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
