--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,17 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="@color/main_screen_background"
+    android:background="@color/menu_background"
     android:paddingHorizontal="@dimen/screen_horizontal_padding">
     <TextView
-        android:paddingTop="@dimen/header_padding_top"
-        android:paddingBottom="@dimen/header_padding_bottom"
+        android:paddingTop="@dimen/space_m"
+        android:paddingBottom="@dimen/space_l"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/header_text_size"
+        android:textSize="@dimen/text_size_l"
         android:textColor="@color/white"
         android:text="@string/app_name"
+        android:fontFamily="@font/ys_display_medium"
         android:textStyle="bold"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,50 +24,18 @@
         android:orientation="vertical">
         <Button
             android:id="@+id/search_button"
-            android:foreground="?attr/selectableItemBackground"
+            style="@style/MenuButtonStyle"
             app:icon="@drawable/search_icon"
-            app:iconGravity="textStart"
-            app:iconTint="@color/text_dark"
-            app:iconSize="@dimen/main_screen_button_icon_size"
-            android:layout_marginBottom="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:text="@string/search"
-            android:textSize="@dimen/main_screen_button_font_size"
-            android:textColor="@color/text_dark"
-            app:cornerRadius="@dimen/main_screen_button_corner_radius"/>
+            android:text="@string/search" />
         <Button
             android:id="@+id/media_button"
-            android:foreground="?attr/selectableItemBackground"
+            style="@style/MenuButtonStyle"
             app:icon="@drawable/media_icon"
-            app:iconGravity="textStart"
-            app:iconTint="@color/text_dark"
-            app:iconSize="@dimen/main_screen_button_icon_size"
-            android:layout_marginBottom="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:text="@string/media"
-            android:textSize="@dimen/main_screen_button_font_size"
-            android:textColor="@color/text_dark"
-            app:cornerRadius="@dimen/main_screen_button_corner_radius" />
+            android:text="@string/media"/>
         <Button
             android:id="@+id/settings_button"
-            android:foreground="?attr/selectableItemBackground"
+            style="@style/MenuButtonStyle"
             app:icon="@drawable/settings_icon"
-            app:iconGravity="textStart"
-            app:iconTint="@color/text_dark"
-            app:iconSize="@dimen/main_screen_button_icon_size"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:text="@string/settings"
-            android:textSize="@dimen/main_screen_button_font_size"
-            android:textColor="@color/text_dark"
-            app:cornerRadius="@dimen/main_screen_button_corner_radius" />
+            android:text="@string/settings"/>
     </LinearLayout>
 </LinearLayout>
