--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="?attr/colorPrimarySurface">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        style="@style/ToolbarStyle"/>
+    <LinearLayout
+        android:theme="@style/Theme.SearchEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="@dimen/screen_horizontal_padding"
+        android:orientation="vertical">
+        <EditText
+            android:id="@+id/search_edit_text"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:hint="@string/search"
+            android:maxLines="1"
+            android:inputType="text"
+            android:drawablePadding="@dimen/space_m"
+            android:drawableTint="?attr/colorAccent"
+            android:padding="@dimen/space_m"
+            android:textSize="@dimen/text_size_m"
+            android:background="@drawable/rounded_edittext"
+            android:backgroundTint="?attr/colorPrimarySurface"
+            android:textColor="?attr/colorPrimary"
+            android:textColorHint="?attr/colorAccent" />
+    </LinearLayout>
+</LinearLayout>
