--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <style name="Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/white</item>
+        <!-- Цвет фона -->
+        <item name="colorPrimarySurface">@color/dark_blue</item>
+        <!-- Цвет кнопки Назад в тулбаре -->
+        <item name="colorControlNormal">@color/white</item>
+
+        <item name="colorAccent">@color/white</item>
+    </style>
+
+    <style name="Theme.SearchEditText" parent="Theme.PlaylistMaker">
+        <item name="colorPrimary">@color/dark_blue</item>
+        <item name="colorPrimarySurface">@color/white</item>
+
+        <item name="colorAccent">@color/dark_blue</item>
     </style>
 </resources>
