--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#000</color>
+    <color name="white">#FFF</color>
+    <color name="dark_blue">#1A1B22</color>
+    <color name="gray">#AEAFB4</color>
+    <color name="gray_light">#E6E8EB</color>
 
-    <color name="default_screen_background">#FFFFFFFF</color>
-    <color name="main_screen_background">#3772E7</color>
-
-    <color name="text_dark">#1A1B22</color>
-    <color name="text_default">#000</color>
-
-    <color name="control_default">#AEAFB4</color>
+    <color name="menu_background">#3772E7</color>
 </resources>
