--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/dark_blue</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <!-- Цвет фона -->
+        <item name="colorPrimarySurface">@color/white</item>
+        <!-- Цвет кнопки Назад в тулбаре -->
+        <item name="colorControlNormal">@color/dark_blue</item>
+
+        <item name="colorAccent">@color/gray</item>
     </style>
 
-    <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
+    <style name="Theme.SearchEditText" parent="Theme.PlaylistMaker">
+        <item name="colorPrimary">@color/dark_blue</item>
+        <item name="colorPrimarySurface">@color/gray_light</item>
+
+        <item name="colorAccent">@color/gray</item>
+    </style>
 </resources>
