--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -14,9 +14,13 @@
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/screen_horizontal_padding"
         android:orientation="vertical">
-        <FrameLayout style="@style/SettingsItemStyle">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <TextView
                 style="@style/SettingsItemLabelStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="@string/dark_theme"/>
             <Switch
                 android:layout_width="wrap_content"
@@ -26,9 +30,12 @@
         </FrameLayout>
         <FrameLayout
             android:id="@+id/share_app"
-            style="@style/SettingsItemStyle">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <TextView
                 style="@style/SettingsItemLabelStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="@string/share_app"/>
             <ImageView
                 style="@style/SettingsItemIconStyle"
@@ -36,9 +43,12 @@
         </FrameLayout>
         <FrameLayout
             android:id="@+id/write_to_support"
-            style="@style/SettingsItemStyle">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <TextView
                 style="@style/SettingsItemLabelStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="@string/write_to_support"/>
             <ImageView
                 style="@style/SettingsItemIconStyle"
@@ -46,9 +56,12 @@
         </FrameLayout>
         <FrameLayout
             android:id="@+id/user_aggrement"
-            style="@style/SettingsItemStyle">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <TextView
                 style="@style/SettingsItemLabelStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="@string/user_aggrement"/>
             <ImageView
                 style="@style/SettingsItemIconStyle"
