--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,4 +53,9 @@
         <item name="android:layout_height">24dp</item>
         <item name="android:layout_gravity">center</item>
     </style>
+    <style name="SearchErrorStyle">
+        <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:textSize">@dimen/text_size_l</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+    </style>
 </resources>
