--- a/app/src/main/res/layout/track_view.xml
+++ b/app/src/main/res/layout/track_view.xml
@@ -15,7 +15,7 @@
         android:layout_weight="1"
         android:layout_height="match_parent"
         android:paddingHorizontal="@dimen/space_s"
-        android:paddingVertical="@dimen/space_xs"
+        android:paddingTop="@dimen/space_xs"
         android:orientation="vertical">
         <TextView
             android:id="@+id/track_title"
