--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,7 +43,7 @@
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
     <style name="TrackDescriptionStyle">
-        <item name="android:textSize">@dimen/text_size_s</item>
+        <item name="android:textSize">@dimen/text_size_xs</item>
         <item name="android:textColor">?attr/colorAccent</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
