--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -31,84 +31,127 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/space_xl">
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/search_results"
+        <FrameLayout
+            android:id="@+id/search_results_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/search_results"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            <ProgressBar
+                android:id="@+id/progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="invisible" />
+            <LinearLayout
+                android:id="@+id/not_found"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="100dp"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible">
+                <ImageView
+                    android:src="@drawable/not_found"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="@dimen/space_xl"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp">
+                </ImageView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/search_404"
+                    style="@style/SearchErrorStyle">
+                </TextView>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/error"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="100dp"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible">
+                <ImageView
+                    android:src="@drawable/search_error"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp">
+                </ImageView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/space_xl"
+                    android:text="@string/search_500_1"
+                    style="@style/SearchErrorStyle">
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textAlignment="center"
+                    android:layout_marginTop="@dimen/space_xl"
+                    android:text="@string/search_500_2"
+                    style="@style/SearchErrorStyle">
+                </TextView>
+                <Button
+                    android:id="@+id/update_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/space_xl"
+                    android:text="@string/update"
+                    android:textSize="@dimen/text_size_s"
+                    android:textColor="?attr/colorPrimarySurface"
+                    android:backgroundTint="?attr/colorPrimary"
+                    android:fontFamily="@font/ys_display_medium"
+                    android:layout_gravity="center"
+                    android:paddingVertical="6dp"
+                    android:paddingHorizontal="8dp" />
+            </LinearLayout>
+        </FrameLayout>
+        <FrameLayout
+            android:id="@+id/recent_tracks"
+            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-        <ProgressBar
-            android:id="@+id/progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="invisible" />
-        <LinearLayout
-            android:id="@+id/not_found"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="100dp"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="invisible">
-            <ImageView
-                android:src="@drawable/not_found"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="@dimen/space_xl"
-                android:layout_width="120dp"
-                android:layout_height="120dp">
-            </ImageView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/search_404"
-                style="@style/SearchErrorStyle">
-            </TextView>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/error"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="100dp"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="invisible">
-            <ImageView
-                android:src="@drawable/search_error"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="120dp"
-                android:layout_height="120dp">
-            </ImageView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/space_xl"
-                android:text="@string/search_500_1"
-                style="@style/SearchErrorStyle">
-            </TextView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textAlignment="center"
-                android:layout_marginTop="@dimen/space_xl"
-                android:text="@string/search_500_2"
-                style="@style/SearchErrorStyle">
-            </TextView>
+            android:layout_marginTop="@dimen/space_xl">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/recent_tracks_title"
+                    android:layout_marginBottom="@dimen/space_l"
+                    style="@style/SearchErrorStyle" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recent_tracks_items"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:layout_marginBottom="@dimen/space_l"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            </LinearLayout>
             <Button
-                android:id="@+id/update_button"
+                android:id="@+id/clear_recent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/space_xl"
-                android:text="@string/update"
+                android:layout_marginBottom="@dimen/space_xl"
+                android:text="@string/clear_history"
                 android:textSize="@dimen/text_size_s"
                 android:textColor="?attr/colorPrimarySurface"
                 android:backgroundTint="?attr/colorPrimary"
                 android:fontFamily="@font/ys_display_medium"
-                android:layout_gravity="center"
+                android:layout_gravity="bottom|center_horizontal"
                 android:paddingVertical="6dp"
-                android:paddingHorizontal="8dp"
-                />
-        </LinearLayout>
+                android:paddingHorizontal="8dp" />
+        </FrameLayout>
     </FrameLayout>
 </LinearLayout>
