--- a/app/src/main/res/layout/track_view.xml
+++ b/app/src/main/res/layout/track_view.xml
@@ -25,14 +25,27 @@
             android:maxLines="1"
             android:ellipsize="end"
             tools:text="@string/dark_theme"/>
-        <TextView
-            android:id="@+id/track_description"
-            style="@style/TrackDescriptionStyle"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:ellipsize="end"
-            tools:text="@string/dark_theme"/>
+            android:paddingTop="@dimen/space_xs"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/track_artist"
+                style="@style/TrackDescriptionStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:maxLines="1"
+                tools:text="@string/dark_theme"/>
+            <TextView
+                android:id="@+id/track_duration"
+                style="@style/TrackDescriptionStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="@string/dark_theme"/>
+        </LinearLayout>
     </LinearLayout>
     <ImageView
         style="@style/TrackIconStyle"
