--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#000</color>
     <color name="white">#FFF</color>
+    <color name="blue">#3772E7</color>
     <color name="dark_blue">#1A1B22</color>
     <color name="gray">#AEAFB4</color>
     <color name="gray_light">#E6E8EB</color>
