--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -49,6 +49,7 @@
         app:layout_constraintEnd_toEndOf="@id/right_top_guideline"
         app:layout_constraintStart_toStartOf="@id/left_top_guideline"
         app:layout_constraintTop_toBottomOf="@+id/player_toolbar"
+        app:layout_constraintBottom_toTopOf="@+id/track_name"
         app:srcCompat="@drawable/track_placeholder" />
 
     <TextView
@@ -132,11 +133,15 @@
         android:id="@+id/duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/space_l"
         android:layout_marginTop="@dimen/space_xxl"
         android:textSize="13sp"
         android:fontFamily="@font/ys_display_regular"
         android:textColor="@color/gray"
+        app:layout_constraintVertical_bias="1.0"
         android:text="@string/duration"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintBottom_toTopOf="@id/album"
         app:layout_constraintTop_toBottomOf="@id/timing"
         app:layout_constraintStart_toStartOf="@id/left_bottom_guideline" />
 
@@ -144,7 +149,6 @@
         android:id="@+id/duration_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_xxl"
         android:textSize="13sp"
         android:fontFamily="@font/ys_display_regular"
         android:textColor="?attr/colorPrimary"
@@ -156,12 +160,12 @@
         android:id="@+id/album"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_l"
+        android:layout_marginBottom="@dimen/space_l"
         android:textSize="13sp"
         android:fontFamily="@font/ys_display_regular"
         android:textColor="@color/gray"
         android:text="@string/album"
-        app:layout_constraintTop_toBottomOf="@id/duration"
+        app:layout_constraintBottom_toTopOf="@id/year"
         app:layout_constraintStart_toStartOf="@id/left_bottom_guideline" />
 
     <TextView
@@ -179,12 +183,12 @@
         android:id="@+id/year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_l"
+        android:layout_marginBottom="@dimen/space_l"
         android:textSize="13sp"
         android:fontFamily="@font/ys_display_regular"
         android:textColor="@color/gray"
         android:text="@string/year"
-        app:layout_constraintTop_toBottomOf="@id/album"
+        app:layout_constraintBottom_toTopOf="@id/genre"
         app:layout_constraintStart_toStartOf="@id/left_bottom_guideline" />
 
     <TextView
@@ -203,12 +207,12 @@
         android:id="@+id/genre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_l"
+        android:layout_marginBottom="@dimen/space_l"
         android:textSize="13sp"
         android:fontFamily="@font/ys_display_regular"
         android:textColor="@color/gray"
         android:text="@string/genre"
-        app:layout_constraintTop_toBottomOf="@id/year"
+        app:layout_constraintBottom_toTopOf="@id/country"
         app:layout_constraintStart_toStartOf="@id/left_bottom_guideline" />
 
     <TextView
@@ -227,19 +231,18 @@
         android:id="@+id/country"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_l"
+        android:layout_marginBottom="@dimen/space_l"
         android:textSize="13sp"
         android:fontFamily="@font/ys_display_regular"
         android:textColor="@color/gray"
         android:text="@string/country"
-        app:layout_constraintTop_toBottomOf="@id/genre"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/left_bottom_guideline" />
 
     <TextView
         android:id="@+id/country_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_xxl"
         android:textSize="13sp"
         android:fontFamily="@font/ys_display_regular"
         android:textColor="?attr/colorPrimary"
