задание спринта номер 16

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,7 +24,7 @@
                 android:text="@string/dark_theme"/>
             <com.google.android.material.switchmaterial.SwitchMaterial
                 style="@style/SwitchStyle"
-                android:id="@+id/theme_swith"
+                android:id="@+id/theme_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|center_vertical" />
