--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,54 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:background="@color/menu_background"
-    android:paddingHorizontal="@dimen/screen_horizontal_padding">
-    <TextView
-        android:paddingTop="@dimen/space_m"
-        android:paddingBottom="@dimen/space_l"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size_l"
-        android:textColor="@color/white"
-        android:text="@string/app_name"
-        android:fontFamily="@font/ys_display_medium"
-        android:textStyle="bold"/>
-    <LinearLayout
-        android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
+
+    <!-- FragmentContainerView для контента -->
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/container_view"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginVertical="28dp"
-        android:orientation="vertical">
-        <Button
-            android:id="@+id/search_button"
-            style="@style/MenuButtonStyle"
-            app:icon="@drawable/search_icon"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginBottom="8dp"
-            android:text="@string/search" />
-        <Button
-            android:id="@+id/media_button"
-            style="@style/MenuButtonStyle"
-            app:icon="@drawable/media_icon"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginBottom="8dp"
-            android:text="@string/media"/>
-        <Button
-            android:id="@+id/settings_button"
-            style="@style/MenuButtonStyle"
-            app:icon="@drawable/settings_icon"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginBottom="8dp"
-            android:text="@string/settings"/>
-    </LinearLayout>
-</LinearLayout>
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/main_navigation_graph"
+
+        app:layout_constraintBottom_toTopOf="@id/dividerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- Линия-разделитель -->
+    <View
+        android:id="@+id/dividerView"
+        android:layout_width="0dp"
+        android:layout_height="0.5dp"
+        android:background="@color/gray_light"
+        app:layout_constraintTop_toBottomOf="@id/container_view"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- BottomNavigationView -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:menu="@menu/bottom_navigation_menu"
+        app:itemTextColor="@color/bottom_nav_text_selector"
+        app:itemIconTint="@color/bottom_nav_text_selector"
+        android:background="?attr/colorPrimarySurface"
+        app:itemBackground="@null"
+        app:itemIconSize="24dp"
+        app:itemActiveIndicatorStyle="@null"
+        app:itemPaddingBottom="@dimen/space_s"
+        app:itemPaddingTop="@dimen/space_s" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
