--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,6 +8,7 @@
     android:background="?attr/colorPrimarySurface">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
+        app:title="@string/settings"
         style="@style/ToolbarStyle"/>
     <LinearLayout
         android:layout_width="match_parent"
