--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,10 +19,12 @@
     <dimen name="corner_radius_s">8dp</dimen>
     <dimen name="corner_radius_xs">6dp</dimen>
 
+    <dimen name="space_xxs">4dp</dimen>
     <dimen name="space_xs">6dp</dimen>
     <dimen name="space_s">8dp</dimen>
     <dimen name="space_m">10dp</dimen>
     <dimen name="space_l">12dp</dimen>
     <dimen name="space_xl">16dp</dimen>
     <dimen name="space_xxl">24dp</dimen>
+    <dimen name="space_xxxl">32dp</dimen>
 </resources>
